--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Mynewsdesk Newsroom for Mac",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "elm-make src/Main.elm --output elm.js && electron main.js"
   },
   "repository": {
     "type": "git",
