Change productName to avoid .app.app extension

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newsroom-app",
-  "productName": "Newsroom.app",
+  "productName": "Newsroom",
   "version": "1.0.0",
   "description": "Mynewsdesk Newsroom for Mac",
   "main": "main.js",
